{
  "version": 4,
  "terraform_version": "1.15.4",
  "serial": 87,
  "lineage": "2b1c2d3e-cc01-39b8-61a7-3ac003f9fb4f",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:630243422167:security-group/sg-04e744b78ae5064c4",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-04e744b78ae5064c4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07dc26608b01fc291"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ai-agent-security-lab-cluster-20260525214844413500000009",
            "name_prefix": "ai-agent-security-lab-cluster-",
            "owner_id": "630243422167",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "ai-agent-security-lab-cluster",
              "Owner": "security-team",
              "Project": "ai-agent-infra-security"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "ai-agent-security-lab-cluster",
              "Owner": "security-team",
              "Project": "ai-agent-infra-security"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8adac91197370ea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:630243422167:security-group/sg-07dc26608b01fc291",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07dc26608b01fc291",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04e744b78ae5064c4"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04e744b78ae5064c4"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04e744b78ae5064c4"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04e744b78ae5064c4"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04e744b78ae5064c4"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04e744b78ae5064c4"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "ai-agent-security-lab-node-20260525214844308400000008",
            "name_prefix": "ai-agent-security-lab-node-",
            "owner_id": "630243422167",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "ai-agent-security-lab-node",
              "Owner": "security-team",
              "Project": "ai-agent-infra-security",
              "kubernetes.io/cluster/ai-agent-security-lab": "owned"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "ai-agent-security-lab-node",
              "Owner": "security-team",
              "Project": "ai-agent-infra-security",
              "kubernetes.io/cluster/ai-agent-security-lab": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8adac91197370ea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2564249939",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04e744b78ae5064c4",
            "security_group_rule_id": "sgr-03bb3cdcb075a7178",
            "self": false,
            "source_security_group_id": "sg-07dc26608b01fc291",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2524059247",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-07dc26608b01fc291",
            "security_group_rule_id": "sgr-0931d01ac28b92a7e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-4077937989",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07dc26608b01fc291",
            "security_group_rule_id": "sgr-0558e94f2c1b3768d",
            "self": false,
            "source_security_group_id": "sg-04e744b78ae5064c4",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-376591643",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07dc26608b01fc291",
            "security_group_rule_id": "sgr-0bfe953c5d0e6b8e2",
            "self": false,
            "source_security_group_id": "sg-04e744b78ae5064c4",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3744477837",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07dc26608b01fc291",
            "security_group_rule_id": "sgr-09cfc2c7346e0d3c1",
            "self": false,
            "source_security_group_id": "sg-04e744b78ae5064c4",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3429633708",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07dc26608b01fc291",
            "security_group_rule_id": "sgr-0a0337bb9fc562241",
            "self": false,
            "source_security_group_id": "sg-04e744b78ae5064c4",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2832022887",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07dc26608b01fc291",
            "security_group_rule_id": "sgr-0b08a21e3b00f49ed",
            "self": false,
            "source_security_group_id": "sg-04e744b78ae5064c4",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2952079233",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07dc26608b01fc291",
            "security_group_rule_id": "sgr-0af6ba4c4262e8bac",
            "self": false,
            "source_security_group_id": "sg-04e744b78ae5064c4",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3475263342",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07dc26608b01fc291",
            "security_group_rule_id": "sgr-05bfed100a3a54637",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-821172097",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07dc26608b01fc291",
            "security_group_rule_id": "sgr-0ef4db419d9cdf4df",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2494411886",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-07dc26608b01fc291",
            "security_group_rule_id": "sgr-0efbc9420ccfc460c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:630243422167:network-acl/acl-0704621bd882b1c8e",
            "default_network_acl_id": "acl-0704621bd882b1c8e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0704621bd882b1c8e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "630243422167",
            "subnet_ids": [
              "subnet-01942219c9c0c8894",
              "subnet-0395de5c965f0435e",
              "subnet-070d67018f185ce07",
              "subnet-0e8d1c9ae05f0ad03"
            ],
            "tags": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "ai-agent-security-lab-vpc-default",
              "Owner": "security-team",
              "Project": "ai-agent-infra-security"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "ai-agent-security-lab-vpc-default",
              "Owner": "security-team",
              "Project": "ai-agent-infra-security"
            },
            "vpc_id": "vpc-0b8adac91197370ea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:630243422167:route-table/rtb-053fd62ecacc9ea70",
            "default_route_table_id": "rtb-053fd62ecacc9ea70",
            "id": "rtb-053fd62ecacc9ea70",
            "owner_id": "630243422167",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "ai-agent-security-lab-vpc-default",
              "Owner": "security-team",
              "Project": "ai-agent-infra-security"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "ai-agent-security-lab-vpc-default",
              "Owner": "security-team",
              "Project": "ai-agent-infra-security"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0b8adac91197370ea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:630243422167:security-group/sg-07e1764fa8583cbe1",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-07e1764fa8583cbe1",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "630243422167",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "ai-agent-security-lab-vpc-default",
              "Owner": "security-team",
              "Project": "ai-agent-infra-security"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "ai-agent-security-lab-vpc-default",
              "Owner": "security-team",
              "Project": "ai-agent-infra-security"
            },
            "vpc_id": "vpc-0b8adac91197370ea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f92fad278c58d8a3",
            "arn": "arn:aws:ec2:us-east-2:630243422167:elastic-ip/eipalloc-0f92fad278c58d8a3",
            "association_id": "eipassoc-09bae534f1ee98b83",
            "domain": "vpc",
            "id": "eipalloc-0f92fad278c58d8a3",
            "network_border_group": "us-east-2",
            "network_interface": "eni-013c33be47e4dd9b4",
            "private_dns": "ip-10-0-101-147.us-east-2.compute.internal",
            "private_ip": "10.0.101.147",
            "public_dns": "ec2-3-141-184-197.us-east-2.compute.amazonaws.com",
            "public_ip": "3.141.184.197",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "ai-agent-security-lab-vpc-us-east-2a",
              "Owner": "security-team",
              "Project": "ai-agent-infra-security"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "ai-agent-security-lab-vpc-us-east-2a",
              "Owner": "security-team",
              "Project": "ai-agent-infra-security"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:630243422167:internet-gateway/igw-0dfb21bc7207ca537",
            "id": "igw-0dfb21bc7207ca537",
            "owner_id": "630243422167",
            "tags": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "ai-agent-security-lab-vpc",
              "Owner": "security-team",
              "Project": "ai-agent-infra-security"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "ai-agent-security-lab-vpc",
              "Owner": "security-team",
              "Project": "ai-agent-infra-security"
            },
            "vpc_id": "vpc-0b8adac91197370ea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f92fad278c58d8a3",
            "association_id": "eipassoc-09bae534f1ee98b83",
            "connectivity_type": "public",
            "id": "nat-0d9627205a65d9a02",
            "network_interface_id": "eni-013c33be47e4dd9b4",
            "private_ip": "10.0.101.147",
            "public_ip": "3.141.184.197",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e8d1c9ae05f0ad03",
            "tags": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "ai-agent-security-lab-vpc-us-east-2a",
              "Owner": "security-team",
              "Project": "ai-agent-infra-security"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "ai-agent-security-lab-vpc-us-east-2a",
              "Owner": "security-team",
              "Project": "ai-agent-infra-security"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03f03eb16f80c229d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d9627205a65d9a02",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03f03eb16f80c229d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0dfb21bc7207ca537",
            "id": "r-rtb-01e0c6b9c2eae69b41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01e0c6b9c2eae69b4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:630243422167:route-table/rtb-03f03eb16f80c229d",
            "id": "rtb-03f03eb16f80c229d",
            "owner_id": "630243422167",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d9627205a65d9a02",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "ai-agent-security-lab-vpc-private",
              "Owner": "security-team",
              "Project": "ai-agent-infra-security"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "ai-agent-security-lab-vpc-private",
              "Owner": "security-team",
              "Project": "ai-agent-infra-security"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8adac91197370ea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:630243422167:route-table/rtb-01e0c6b9c2eae69b4",
            "id": "rtb-01e0c6b9c2eae69b4",
            "owner_id": "630243422167",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dfb21bc7207ca537",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "ai-agent-security-lab-vpc-public",
              "Owner": "security-team",
              "Project": "ai-agent-infra-security"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "ai-agent-security-lab-vpc-public",
              "Owner": "security-team",
              "Project": "ai-agent-infra-security"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8adac91197370ea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09bfb209dbfb6be69",
            "route_table_id": "rtb-03f03eb16f80c229d",
            "subnet_id": "subnet-01942219c9c0c8894"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068cb54ab5fb12c33",
            "route_table_id": "rtb-03f03eb16f80c229d",
            "subnet_id": "subnet-0395de5c965f0435e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0565f7ae18e6cdb",
            "route_table_id": "rtb-01e0c6b9c2eae69b4",
            "subnet_id": "subnet-0e8d1c9ae05f0ad03"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026b74416a9c91740",
            "route_table_id": "rtb-01e0c6b9c2eae69b4",
            "subnet_id": "subnet-070d67018f185ce07"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:630243422167:subnet/subnet-01942219c9c0c8894",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01942219c9c0c8894",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "630243422167",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "ai-agent-security-lab-vpc-private-us-east-2a",
              "Owner": "security-team",
              "Project": "ai-agent-infra-security",
              "kubernetes.io/cluster/ai-agent-security-lab": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "ai-agent-security-lab-vpc-private-us-east-2a",
              "Owner": "security-team",
              "Project": "ai-agent-infra-security",
              "kubernetes.io/cluster/ai-agent-security-lab": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b8adac91197370ea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:630243422167:subnet/subnet-0395de5c965f0435e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0395de5c965f0435e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "630243422167",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "ai-agent-security-lab-vpc-private-us-east-2b",
              "Owner": "security-team",
              "Project": "ai-agent-infra-security",
              "kubernetes.io/cluster/ai-agent-security-lab": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "ai-agent-security-lab-vpc-private-us-east-2b",
              "Owner": "security-team",
              "Project": "ai-agent-infra-security",
              "kubernetes.io/cluster/ai-agent-security-lab": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b8adac91197370ea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:630243422167:subnet/subnet-0e8d1c9ae05f0ad03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8d1c9ae05f0ad03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "630243422167",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "ai-agent-security-lab-vpc-public-us-east-2a",
              "Owner": "security-team",
              "Project": "ai-agent-infra-security",
              "kubernetes.io/cluster/ai-agent-security-lab": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "ai-agent-security-lab-vpc-public-us-east-2a",
              "Owner": "security-team",
              "Project": "ai-agent-infra-security",
              "kubernetes.io/cluster/ai-agent-security-lab": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b8adac91197370ea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:630243422167:subnet/subnet-070d67018f185ce07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070d67018f185ce07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "630243422167",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "ai-agent-security-lab-vpc-public-us-east-2b",
              "Owner": "security-team",
              "Project": "ai-agent-infra-security",
              "kubernetes.io/cluster/ai-agent-security-lab": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "ai-agent-security-lab-vpc-public-us-east-2b",
              "Owner": "security-team",
              "Project": "ai-agent-infra-security",
              "kubernetes.io/cluster/ai-agent-security-lab": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b8adac91197370ea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:630243422167:vpc/vpc-0b8adac91197370ea",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0704621bd882b1c8e",
            "default_route_table_id": "rtb-053fd62ecacc9ea70",
            "default_security_group_id": "sg-07e1764fa8583cbe1",
            "dhcp_options_id": "dopt-079f1a573467542b0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b8adac91197370ea",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-053fd62ecacc9ea70",
            "owner_id": "630243422167",
            "tags": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "ai-agent-security-lab-vpc",
              "Owner": "security-team",
              "Project": "ai-agent-infra-security"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "ai-agent-security-lab-vpc",
              "Owner": "security-team",
              "Project": "ai-agent-infra-security"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}